added audio references
done by will

Co-Authored-By: squill <69396972+squilll@users.noreply.github.com>

--- a/Unreal Engine Files/Alan/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Unreal Engine Files/Alan/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -155,7 +155,7 @@ AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 ToolbarOpenBPClass.ThumbnailSizeScale=0.100000
 ToolbarOpenBPClass.CurrentViewType=0
-ContentBrowserTab1.SelectedPaths=/Game/Geometry/Meshes
+ContentBrowserTab1.SelectedPaths=/Game/Audio
 AssetDialog.ThumbnailSizeScale=0.100000
 AssetDialog.CurrentViewType=1
 
@@ -163,9 +163,7 @@ AssetDialog.CurrentViewType=1
 LastLevel=/Game/PuzzleBP/Maps/GameEnvironment
 
 [AssetEditorSubsystem]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay.OutputDisplay
-OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/BoxSpawner.BoxSpawner
+CleanShutdown=True
 
 [RootWindow]
 ScreenPosition=X=124.000 Y=72.000
@@ -1040,26 +1038,26 @@ StaticMeshEditor.TimeStamp=2022.05.04-23.54.07
 StaticMeshEditor.LastCompileMethod=Unknown
 
 [ContentBrowserRecent]
-MRUItem0=/Game/PuzzleBP/Blueprints/BoxSpawner
-MRUItem1=/Game/Geometry/Meshes/ConveyorEnd_ConeyorEndScan_001
-MRUItem2=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay
-MRUItem3=/Game/PuzzleBP/Blueprints/Cube
-MRUItem4=/Game/PuzzleBP/Blueprints/BoxChecker
-MRUItem5=/Game/PuzzleBP/Blueprints/ALAN
-MRUItem6=/Game/PuzzleBP/Blueprints/ConveyorBelt
-MRUItem7=/Game/PuzzleBP/Blueprints/MainConveyor
-MRUItem8=/Game/Materials/crt
-MRUItem9=/Game/Geometry/Meshes/Electrical_panel_Sign_Cube
-MRUItem10=/Game/ParticleFX/spraySystem
-MRUItem11=/Game/PuzzleBP/Blueprints/Cylinder_Blueprint
-MRUItem12=/Game/PuzzleBP/Blueprints/Box_Bp
-MRUItem13=/Game/Audio/Cylinder_Blueprint
-MRUItem14=/Game/Audio/Fail_Beep/497710__miksmusic__hi-tech-error-alert-1__fail_beep__Cue
-MRUItem15=/Game/Audio/Success_Beep/success_beep_Cue
-MRUItem16=/Game/ParticleFX/AlanRings/ringsSystem
-MRUItem17=/Game/PuzzleBP/Blueprints/CommandInterface/ControlPanel
-MRUItem18=/Engine/EditorBlueprintResources/StandardMacros
-MRUItem19=/Game/Audio/Music/alanbgmv3_Cue
+MRUItem0=/Game/Audio/SwitchButtonSounds/switch1to38
+MRUItem1=/Game/Audio/SwitchButtonSounds/switch38
+MRUItem2=/Game/Audio/Beep_Buttons/Btn
+MRUItem3=/Game/ParticleFX/Textures/M_Spray
+MRUItem4=/Game/ParticleFX/spraySystem
+MRUItem5=/Game/ParticleFX/spraySystemBP
+MRUItem6=/Game/PuzzleBP/Blueprints/BoxSpawner
+MRUItem7=/Game/Geometry/Meshes/ConveyorEnd_ConeyorEndScan_001
+MRUItem8=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay
+MRUItem9=/Game/PuzzleBP/Blueprints/Cube
+MRUItem10=/Game/PuzzleBP/Blueprints/BoxChecker
+MRUItem11=/Game/PuzzleBP/Blueprints/ALAN
+MRUItem12=/Game/PuzzleBP/Blueprints/ConveyorBelt
+MRUItem13=/Game/PuzzleBP/Blueprints/MainConveyor
+MRUItem14=/Game/Materials/crt
+MRUItem15=/Game/Geometry/Meshes/Electrical_panel_Sign_Cube
+MRUItem16=/Game/PuzzleBP/Blueprints/Cylinder_Blueprint
+MRUItem17=/Game/PuzzleBP/Blueprints/Box_Bp
+MRUItem18=/Game/Audio/Cylinder_Blueprint
+MRUItem19=/Game/Audio/Fail_Beep/497710__miksmusic__hi-tech-error-alert-1__fail_beep__Cue
 
 [DetailCategories]
 PuzzleBlock_C.Tick=True
@@ -2407,6 +2405,18 @@ MainConveyor_C.Input=True
 MainConveyor_C.Actor=True
 MainConveyor_C.Tick=True
 MaterialExpressionVertexColor.MaterialExpression=True
+SoundWave.Format=True
+SoundWave.Playback=True
+SoundWave.Sound=True
+SoundWave.Loading=True
+SoundWave.Subtitles=True
+SoundWave.Analysis=True
+SoundWave.Info=True
+SoundWave.File Path=True
+SoundWave.Developer=True
+SoundWave.Voice Management=True
+SoundWave.Effects=True
+SoundWave.Attenuation=True
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2470,7 +2480,6 @@ MRUItem6=/Game/StarterContent/Maps/StarterMap
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
-bShowGrid=False
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -2580,6 +2589,8 @@ FloorScale3D=(X=1.000000,Y=1.000000,Z=1.000000)
 /Game/Geometry/Meshes/Electrical_panel_Sign_Cube.Electrical_panel_Sign_Cube=1
 /Game/PuzzleBP/Blueprints/MainConveyor.MainConveyor=0
 /Game/Geometry/Meshes/ConveyorEnd_ConeyorEndScan_001.ConveyorEnd_ConeyorEndScan_001=1
+/Game/Audio/Beep_Buttons/Btn.Btn=1
+/Game/Audio/SwitchButtonSounds/switch38.switch38=1
 
 [PlacementMode]
 RecentlyPlaced=/Game/PuzzleBP/Blueprints/Cube.Cube;
